# masresearch

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  pipeline.yml
data/: items.json  meta.json  stats.json
masresearcher/: __init__.py  citations.py  config.py  embeddings.py  export_json.py  graph.py  llm.py  mermaid_check.py  models.py  run.py  state.py  store.py
masresearcher/nodes/: __init__.py  citations.py  classify.py  dedup.py  diagram.py  enrich.py  persist.py  planner.py
masresearcher/sources/: __init__.py  arxiv.py  demo.py  github_hf.py  rss.py  tavily.py
tools/mermaid-validate/: package.json  validate.mjs
web/: next.config.js  package-lock.json  package.json
web/app/: globals.css  layout.js  page.js
web/components/: CitationGraph.js  MermaidDiagram.js  Sparkline.js
web/lib/: data.js
