[project]
name = "masresearcher"
version = "0.1.0"
description = "Autonomous multi-agent research feed for Physical AI, Multi-Agent Systems, and Vision AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chris" }]

dependencies = [
    # Orchestration & LLM
    "langgraph>=0.2.50",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langsmith>=0.1.140",
    # Config & schemas
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # Sources
    "arxiv>=2.1",
    "feedparser>=6.0",       # RSS/Atom
    "tavily-python>=0.5",    # web search
    "httpx>=0.27",
    # Utilities
    "tenacity>=8.3",         # retries
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
# Local embeddings for vector-similarity dedup (Phase 2). Kept optional so the
# Phase 0/1 pipeline stays dependency-light and CI-fast.
embeddings = ["fastembed>=0.3"]
dev = ["ruff>=0.6", "pytest>=8.0"]

[project.scripts]
masresearcher = "masresearcher.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["masresearcher"]

[tool.ruff]
line-length = 100
target-version = "py311"
